Add pnpm to GH Actions

--- a/.github/workflows/setup-node/action.yml
+++ b/.github/workflows/setup-node/action.yml
@@ -8,6 +8,9 @@ runs:
       with:
         node-version: 20
 
+    - name: Setup pnpm
+      uses: pnpm/action-setup@v3
+
     - name: Cache dependencies ⚡
       id: cache_dependencies
       uses: actions/cache@v3
