--- a/.github/workflows/setup-node/action.yml
+++ b/.github/workflows/setup-node/action.yml
@@ -10,6 +10,8 @@ runs:
 
     - name: Setup pnpm
       uses: pnpm/action-setup@v3
+      with:
+        version: 9
 
     - name: Cache dependencies ⚡
       id: cache_dependencies
