--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.2",
+    "@storybook/addon-a11y": "^8.4.6",
     "@storybook/addon-essentials": "^8.5.0-alpha.9",
     "@storybook/addon-mdx-gfm": "^8.5.0-alpha.9",
     "@storybook/addon-onboarding": "^8.5.0-alpha.9",
