--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:ci": "vitest run",
+    "test-storybook": "vitest --project=storybook",
+    "chromatic": "npx chromatic --project-token=chpt_16dd44a4ab3da28"
   },
   "dependencies": {
     "next": "15.0.4",
@@ -16,31 +21,36 @@
     "react-dom": "19.0.0-rc-66855b96-20241106"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.2",
-    "@storybook/addon-a11y": "^8.4.6",
-    "@storybook/addon-essentials": "^8.5.0-alpha.9",
-    "@storybook/addon-mdx-gfm": "^8.5.0-alpha.9",
-    "@storybook/addon-onboarding": "^8.5.0-alpha.9",
-    "@storybook/blocks": "^8.5.0-alpha.9",
-    "@storybook/experimental-addon-test": "^8.5.0-alpha.9",
-    "@storybook/experimental-nextjs-vite": "8.5.0-alpha.9",
-    "@storybook/nextjs": "^8.5.0-alpha.9",
-    "@storybook/react": "^8.5.0-alpha.9",
-    "@storybook/test": "^8.5.0-alpha.9",
+    "@chromatic-com/storybook": "^3.2.1",
+    "@storybook/addon-a11y": "^8.5.0-beta.1",
+    "@storybook/addon-coverage": "^1.0.4",
+    "@storybook/addon-essentials": "^8.5.0-beta.1",
+    "@storybook/addon-themes": "^8.5.0-beta.1",
+    "@storybook/blocks": "^8.5.0-beta.1",
+    "@storybook/experimental-addon-test": "^8.5.0-beta.1",
+    "@storybook/react": "^8.5.0-beta.1",
+    "@storybook/experimental-nextjs-vite": "^8.5.0-beta.1",
+    "@storybook/test": "^8.5.0-beta.1",
+    "@storybook/test-runner": "^0.21.0",
+    "@storybook/theming": "^8.5.0-beta.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.1",
     "@types/node": "^20",
+    "@storybook/addon-mdx-gfm": "^8.5.0-beta.1",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@vitest/browser": "^2.1.5",
-    "eslint": "^8",
+    "@vitest/coverage-v8": "^3.0.5",
+    "chromatic": "^11.25.2",
+    "eslint": "^9",
     "eslint-config-next": "15.0.3",
-    "eslint-plugin-storybook": "^0.11.1",
+    "eslint-plugin-storybook": "^0.11.2",
     "playwright": "^1.49.0",
     "postcss": "^8",
-    "storybook": "^8.5.0-alpha.9",
+    "storybook": "^8.5.0-beta.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
-    "vitest": "^2.1.5"
+    "vitest": "^2.1.5",
+    "vitest-axe": "^0.1.0"
   }
 }
